# pxshot-c

./: CMakeLists.txt  README.md
cmake/: pxshot.pc.in  pxshotConfig.cmake.in
examples/: basic.c  header_only.c  store.c  usage.c
include/: cJSON.h  pxshot.h
src/: pxshot.c
